# ChangeLog for net-misc/logjam
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/ChangeLog,v 1.24 2004/12/21 14:16:06 joem Exp $

  21 Dec 2004; Joe McCann <joem@gentoo.org> logjam-4.2.2.ebuild,
  logjam-4.3.2.ebuild, logjam-4.4.0-r1.ebuild, logjam-4.4.0.ebuild:
  Needs hard dep on libgtkhtml-3.0.10* now that a newer slot is available

*logjam-4.4.0-r1 (21 Dec 2004)

  21 Dec 2004; Joe McCann <joem@gentoo.org>
  +files/logjam-4.4.0-offline-sync.patch, +logjam-4.4.0-r1.ebuild:
  Adding patch to fix offline synchronization, closes bug 71252

  23 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> logjam-4.4.0.ebuild:
  Added to stable amd64

  18 Jun 2004; Brad Laue <brad@gentoo.org> logjam-4.4.0.ebuild:
  Fix GNOME menu icon.

  12 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/logjam-4.4.0-gcc3.4.patch:
  Added gcc 3.4 patch to fix bug #52481.  Added ~amd64.

  27 May 2004; Jason Wever <weeve@gentoo.org> logjam-4.3.2.ebuild:
  Stable on sparc.

*logjam-4.4.0 (19 Apr 2004)

  19 Apr 2004; <khai@gentoo.org> logjam-4.3.2.ebuild:
  Version bump, closes #48344.  Marked logjam-4.3.2 stable on x86.

  19 Mar 2004; Jason Wever <weeve@gentoo.org> logjam-4.2.2.ebuild,
  logjam-4.3.2.ebuild:
  Marked 4.2.2 stable and added ~sparc keyword to 4.3.2

  12 Mar 2004; Jason Wever <weeve@gentoo.org> logjam-4.2.2.ebuild:
  Added ~sparc keyword.

*logjam-4.3.2 (06 Mar 2004)

  06 Mar 2004; Alastair Tse <liquidx@gentoo.org> logjam-4.3.2.ebuild:
  version bump

*logjam-4.2.4 (28 Sep 2003)

  28 Sep 2003; Mike Gardiner <obz@gentoo.org> logjam-4.2.2.ebuild,
  logjam-4.2.4.ebuild:
  New version, and marked 4.2.2 stable on x86. Sparc/ppc keywords need to be
  updated

*logjam-4.2.2 (21 Jul 2003)

  21 Jul 2003; Alastair Tse <liquidx@gentoo.org> logjam-4.2.2.ebuild:
  version bump

*logjam-4.1.2-r1 (19 Jun 2003)
 
  13 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.
