@@ -1,12 +1,14 @@
-MD5 5cb2f7ace2dc09acb5c055097ffd1472 ChangeLog 2960
+MD5 d835ee1ee95a707d7e6c59bd6717bd03 ChangeLog 3169
+MD5 3e5cb2e381b02c3f6e4ddeb35c3df735 logjam-4.2.2.ebuild 880
+MD5 541c16e6114074f2380530dabe301b37 logjam-4.3.2.ebuild 889
+MD5 7102fb0d4e47599ec0b7b4de75a8b932 logjam-4.4.0-r1.ebuild 997
+MD5 a9dfc850af49c222fb98c4bb42275315 logjam-4.4.0.ebuild 1048
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 057306f2afed1a8ed0bd5925f0085901 logjam-4.3.2.ebuild 889
-MD5 f3cb052180c4a4be4cfc85e130042bd5 logjam-4.4.0.ebuild 1048
-MD5 5c4d1a97d2f8d2b8868f7acc14e08802 logjam-4.4.0-r1.ebuild 997
-MD5 5b8ce13f651ae7238e99aaf07e384730 logjam-4.2.2.ebuild 880
+MD5 3c1156ff5ece859db2349e456e7b937a logjam-4.4.1.ebuild 1096
 MD5 2903f2d3b78e59f9ed8b9f012c5e2210 files/digest-logjam-4.2.2 64
 MD5 94348f82d3a7b91d9988d1629c4bf2a8 files/digest-logjam-4.3.2 65
 MD5 30945ddb58c8f3eb3780fcf9e48dbda3 files/digest-logjam-4.4.0 65
-MD5 68dac613ab0e68a698fcac1864aeae45 files/logjam-4.4.0-gcc3.4.patch 241
 MD5 30945ddb58c8f3eb3780fcf9e48dbda3 files/digest-logjam-4.4.0-r1 65
+MD5 68dac613ab0e68a698fcac1864aeae45 files/logjam-4.4.0-gcc3.4.patch 241
 MD5 1a113c3728bec399a937fb09aec13464 files/logjam-4.4.0-offline-sync.patch 870
+MD5 4e80e5bbdb7934542435e47d0f65b3fd files/digest-logjam-4.4.1 65
