@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/logjam-4.4.0.ebuild,v 1.6 2004/12/21 14:16:06 joem Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/logjam-4.4.0.ebuild,v 1.7 2005/01/05 09:58:00 joem Exp $
 
 IUSE="xmms spell gtkhtml"
 
