@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/logjam
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/ChangeLog,v 1.24 2004/12/21 14:16:06 joem Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/ChangeLog,v 1.25 2005/01/05 09:58:00 joem Exp $
+
+*logjam-4.4.1 (05 Jan 2005)
+
+  05 Jan 2005; Joe McCann <joem@gentoo.org> +logjam-4.4.1.ebuild:
+  New version released, reported in bug 76696. Ebuild now offers more use
+  switches including a text only mode.
 
   21 Dec 2004; Joe McCann <joem@gentoo.org> logjam-4.2.2.ebuild,
   logjam-4.3.2.ebuild, logjam-4.4.0-r1.ebuild, logjam-4.4.0.ebuild:
